<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_a_injury"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextInjuryType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_of_injury"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextInjuryLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_injury_location"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextInjuryLocation"
        android:layout_marginTop="8dp">
        <Spinner
            android:id="@+id/spinnerInjurySeverity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/injury_severity_options"
            />
    </com.google.android.material.textfield.TextInputLayout>

<!--    <ImageView-->
<!--        android:id="@+id/imageViewInjuryPhoto"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="200dp"-->
<!--        android:scaleType="centerCrop"-->
<!--        android:src="@android:drawable/ic_menu_camera"/>-->

    <ImageView
        android:id="@+id/imageViewSelectedImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/select_image" />

    <Button
        android:id="@+id/buttonSelectImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_image"/>

    <Button
        android:id="@+id/buttonSubmitInjury"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/submit"/>

</LinearLayout>

