<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_primary"
        android:alpha="0.9"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="YOUR PERSONAL INJURY TRACKING PARTNER"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:textSize="32sp"
                android:textAlignment="center"
                android:textColor="@color/white"/>

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:cardCornerRadius="28dp"
            android:layout_marginBottom="-20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="28dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Welcome"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:textColor="@color/my_primary"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Please login with your information"
                    />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"/>

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_marginTop="8dp"/>

                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/my_secondary"
                    android:textColor="@color/white"
                    android:text="@string/login"
                    android:layout_marginTop="16dp"/>

                <Button
                    android:id="@+id/buttonGoToRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/my_secondary"
                    android:textColor="@color/white"
                    android:text="@string/register"
                    android:layout_marginTop="8dp"/>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remember_me"
                        android:alpha="0.7"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/i_forgot_my_password"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        />

                </RelativeLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>




    </RelativeLayout>

</RelativeLayout>
